--- a/html page1.html
+++ b/html page1.html
@@ -10,7 +10,7 @@
  text-align: center
  }
   h4  {background-color: yellow;
-   color: Blue;
+   color: red,
    margin-left:auto;
    margin-right:auto;
    text-align: center;
@@ -24,7 +24,7 @@
    
 
          <hgroup>
-         <h1>This is my First website</h1>
+         <h1>This is my third website</h1>
          <h4>I am using html5 to build this <h4>
          </hgroup>
    </header>
