--- a/html page 7.html
+++ b/html page 7.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title> This is my first website </title>
+  <title> This is my first website and i want more to develop as UI developer </title>
   
 <style type ="text/css" media= "screen">
  h1 {font-family: Arial,Times Newroman;
