--- a/html page 8.html
+++ b/html page 8.html
@@ -13,7 +13,8 @@
  border-style: solid
  border-color: green
 
- <h2>and i want to know how it github works</h2>
+ <h2>and i want to know how it github works so that i can use it in my future project
+ </h2>
 
  }
   h4  {background-color: yellow;
