--- a/html page 8.html
+++ b/html page 8.html
@@ -11,7 +11,7 @@
  width: 80%;
  border-width: 20px
  border-style: solid
- border-color: green
+ border-color: red
 
  <h2>and i want to know how it github works so that i can use it in my future project
  </h2>
@@ -24,9 +24,7 @@
    text-align: center;
    }
    section
-   {border-width: 20px
- border-style: solid
- border-color: green
+   { border: 20px solid red;
  }
    
 </style>
