--- a/html page 8.html
+++ b/html page 8.html
@@ -10,18 +10,29 @@
  text-align: center;
  width: 80%;
  border-width: 20px
- border-style: solid
- border-color: red
+ border-style: solid;
+ border-color: red;
 
  <h2>and i want to know how it github works so that i can use it in my future project
  </h2>
 
+ h3 {background-color: pink;
+      color: green;
+      border-color: yellowgreen;
+      border-width: 2px;
+      border :dotted;
+      padding :10px;
+      margin: 15px;
+      width: 50%;
+      text-align: center;
+   }
  }
-  h4  {background-color: yellow;
+  h4  {background-color: yellowgreen;
    color: Blue;
    margin-left:auto;
    margin-right:auto;
    text-align: center;
+   width : 50%;
    }
    section
    { border: 20px solid red;
@@ -42,6 +53,7 @@
   </ul>
          <hgroup>
          <h1>This is my First website</h1>
+         <h3>this is my last attempt</h3>
          <h4>I am using html5 to build this <h4>
 		  <img src="../capture.jpg" alt= "second year bhogi" height="200px" width="200px">
 
